@@ -1,3 +1,7 @@
+2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+        * slab.cpp: Refactor, fix memory leak, fix tracing.
+
 2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
         * slab.cpp: Make use of new interface for traceroot.
